[tool.poetry]
name = "pygeoapi"
version = "0.9.0-dev"
description = "Implementation of OGC API suite of standards"
license = "MIT"
authors = ["Tom Kralidis <tomkralidis@gmail.com>"]
maintainers = ["Tom Kralidis <tomkralidis@gmail.com>"]
readme = "README.md"
homepage = "https://pygeoapi.io"
repository = "https://github.com/geopython/pygeoapi"
documentation = "https://docs.pygeoapi.io/en/stable/index.html"
keywords = [
    "geospatial",
    "data",
    "api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
flask = "^1.1.2"
python-dateutil = "^2.8.1"
pytz = "^2020.1"
pyyaml = "^5.3.1"
rasterio = "^1.1.6"
unicodecsv = "^0.14.1"
elasticsearch = {version = "^7.9.1", optional = true}
fiona = {version = "^1.8.17", optional = true}
GDAL = {version = ">=3.0.0", optional = true}
netCDF4 = {version = "^1.5.4", optional = true}
psycopg2-binary = {version = "2.8.4", optional = true}
pymongo = {version = "3.10.1", optional = true}
scipy = {version = "^1.5.2", optional = true}
xarray = {version = "^0.16.0", optional = true}
aiofiles = {version = "^0.5.0", optional = true}
starlette = {version = "^0.13.8", optional = true}
uvicorn = {version = "^0.11.8", optional = true}
gunicorn = "^20.0.4"
importlib-metadata = "^2.0.0"

[tool.poetry.extras]
provider = [
    "elasticsearch",
    "fiona",
    "GDAL",
    "netCDF4",
    "psycopg2-binary",
    "pymongo",
    "scipy",
    "xarray",
]
starlette = [
    "aiofiles",
    "starlette",
    "uvicorn",
]

[tool.poetry.dev-dependencies]
flask_cors = "^3.0.9"
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
pytest-env = "^0.6.2"
coverage = "^5.3"
pyld = "^2.0.3"
flake8 = "^3.8.3"
sphinx = "3.0.1"
sphinx_rtd_theme = "^0.5.0"

[tool.poetry.scripts]
pygeoapi = "pygeoapi.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
